updated image path

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Nikki Efstathiou | Portfolio</title>
-    <link rel="stylesheet" href="../CSS/reset.css">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
     <!-- hero unit -->
@@ -11,14 +11,14 @@
       <section class="hero">
         <header class="header">
           <a href="index.html" class="logo">
-            <img src="../images/logosignature.svg" alt="logo">
+            <img src="images/logosignature.svg" alt="logo">
           </a>
           <div class="container">
             <div class="navigation">
               <nav>
                 <div class="nav-wrapper">
                   <ul>
-                    <li><a href="index.html"></a><img class="homehighlight" src="../images/homegreen.svg">home</li>
+                    <li><a href="index.html"></a><img class="homehighlight" src="images/homegreen.svg">home</li>
                     <li><a href="about.html">about</a></li>
                     <li><a href="resume.pdf">resume</a></li>
                     <li><a href="contact.html">contact</a></li>
@@ -29,36 +29,36 @@
           </div>
           </header>
       <div class="circle">
-          <img src="../images/circleshape.svg" alt="circle">
+          <img src="images/circleshape.svg" alt="circle">
       </div>
           <div class="triangle">
-            <img src="../images/triangleshape.svg" alt="triangle">
+            <img src="images/triangleshape.svg" alt="triangle">
           </div>
           <div class="square">
-            <img src="../images/squareline.svg" alt="square">
+            <img src="images/squareline.svg" alt="square">
           </div>
           <div class="diamond">
-            <img src="../images/diamond.svg" alt="diamond">
+            <img src="images/diamond.svg" alt="diamond">
           </div>
       <div class="herotext">
         <h1>hello!</h1>
-        <img class="squiggle" src="../images/squiggle.svg" alt="squiggle">
+        <img class="squiggle" src="images/squiggle.svg" alt="squiggle">
         <h2 class="name">My name is Nikki Efstathiou
-          <img class="nikkihighlight" src="../images/nikkihighlight.svg">
+          <img class="nikkihighlight" src="images/nikkihighlight.svg">
         </h2>
         <p class="abouttext">I'm a UX designer living in Los Angeles with a desire to create <span class="friendly">friendly</span> experiences with the user in mind every step of the way.
-          <img class="friendlyhighlight" src="../images/friendlyhighlight.svg">
+          <img class="friendlyhighlight" src="images/friendlyhighlight.svg">
         </p>
       </div>
       <div class="downarrow">
         <p class="featuredworktext">check out my work</p>
-      <img src="../images/bluearrow.svg" alt="downarrow">
+      <img src="images/bluearrow.svg" alt="downarrow">
     </div>
   </section>
   <!--Project 1-->
   <section class="flowspaceproject">
     <div class="flowspacemockup">
-    <img src="../images/flowspacemockup.svg" alt="flowspace mockup">
+    <img src="images/flowspacemockup.svg" alt="flowspace mockup">
   </div>
   <div class="projecttext">
   <h3>FLOWSPACE</h3>
@@ -68,10 +68,10 @@
     <div class="button">
     <a href="project1.html">View case study
     <div class="buttonarrow">
-      <img src="../images/sidearrow.svg" alt="buttonarrow">
+      <img src="images/sidearrow.svg" alt="buttonarrow">
     </a>
   </div>
-    <img class="buttonhighlight" src="../images/buttonhighlight.svg">
+    <img class="buttonhighlight" src="images/buttonhighlight.svg">
   </div>
 </div>
 </section>
@@ -82,7 +82,7 @@
   <div class="skill">
     <h4>Discovery & Research</h4>
     <div class="image">
-    <img src="../images/research.svg" alt="Discovery & Research">
+    <img src="images/research.svg" alt="Discovery & Research">
   </div>
     <ul>
       <li>Competitive Analysis</li>
@@ -90,11 +90,11 @@
       <li>User personas</li>
     </ul>
   </div>
- <img class ="dots" src="../images/dots.svg">
+ <img class ="dots" src="images/dots.svg">
   <div class="skill">
     <h4>Information Architecture</h4>
     <div class="image">
-    <img src="../images/IA.svg" alt="Information Architecture">
+    <img src="images/IA.svg" alt="Information Architecture">
   </div>
     <ul>
       <li>User Stories</li>
@@ -102,11 +102,11 @@
       <li>Wireframing</li>
     </ul>
   </div>
- <img class ="dots" src="../images/dots.svg">
+ <img class ="dots" src="images/dots.svg">
   <div class="skill">
     <h4>Visual Design</h4>
       <div class="image">
-        <img src="../images/visualdesign.svg" alt="Visual Design">
+        <img src="images/visualdesign.svg" alt="Visual Design">
       </div>
     <ul>
       <li>Branding & Identity</li>
@@ -114,22 +114,22 @@
       <li>High Fidelity Mock Ups</li>
     </ul>
   </div>
- <img class= "dots" src="../images/dots.svg">
+ <img class= "dots" src="images/dots.svg">
   <div class="skill">
     <h4>User Testing</h4>
     <div class="image">
-    <img src="../images/testing.svg" alt="User testing">
+    <img src="images/testing.svg" alt="User testing">
   </div>
     <ul>
       <li>Clickable Prototype</li>
       <li>Usability Testing</li>
     </ul>
   </div>
- <img class ="dots" src="../images/dots.svg">
+ <img class ="dots" src="images/dots.svg">
   <div class="skill">
     <h4>Development</h4>
     <div class="image">
-    <img src="../images/development.svg" alt="Development">
+    <img src="images/development.svg" alt="Development">
   </div>
     <ul>
       <li>HTML / CSS</li>
@@ -137,13 +137,13 @@
     </ul>
   </div>
 </div>
-  <img class="processarrow" src="../images/processarrow.svg">
+  <img class="processarrow" src="images/processarrow.svg">
 </section>
 <!--Testimonials-->
   <h2>Testimonials</h2>
 <section class="testimonials">
   <div class= "phototestimonial">
-    <img src="../images/fillerphoto.svg" alt="Mike Dekker">
+    <img src="images/fillerphoto.svg" alt="Mike Dekker">
     <p class="testimonialname">Mike Dekker</p>
   </div>
   <p class="review">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
@@ -157,16 +157,16 @@
   <div class="contactbutton">
   <a href="contact.html">get in touch
     <div class="buttonarrow">
-    <img src="../images/sidearrow.svg" alt="buttonarrow">
+    <img src="images/sidearrow.svg" alt="buttonarrow">
   </a>
 </div>
 </div>
 <div class="contacticons">
   <div class="footericons">
       <ul>
-        <li> <a href="https://github.com/nikkefstath"><img src="../images/github.svg" alt="github"></a></li>
-        <li> <a href="mailto:naefstathiou@gmail.com"><img src="../images/mail.svg" alt="email"></a></li>
-        <li> <a href="www.linkedin.com/in/nikkiefstathiou"><img src="../images/linkedin.svg" alt=linkedin></a></li>
+        <li> <a href="https://github.com/nikkefstath"><img src="images/github.svg" alt="github"></a></li>
+        <li> <a href="mailto:naefstathiou@gmail.com"><img src="images/mail.svg" alt="email"></a></li>
+        <li> <a href="www.linkedin.com/in/nikkiefstathiou"><img src="images/linkedin.svg" alt=linkedin></a></li>
       </ul>
     </div>
     </div>
