--- a/project1.html
+++ b/project1.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <title>Flowspace Case Study</title>
-    <link rel="stylesheet" href="../CSS/reset.css">
-    <link rel="stylesheet" href="../CSS/project1.css">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/project1.css">
   </head>
   <body>
     <!-- hero unit -->
-    <div class="logo">
+    <div class="container">
       <section class="hero">
         <header class="header">
           <a href="index.html" class="logo">
-            <img src="../images/logosignature.svg" alt="logo">
+            <img src="images/logosignature.svg" alt="logo">
           </a>
-          <div class="container">
+          <div class="top-bar">
             <div class="navigation">
               <nav>
                 <div class="nav-wrapper">
@@ -29,7 +29,7 @@
           </div>
           </header>
           <div class="projecthero">
-            <img class="flowspacemockup" src="../images/flowspacemockup.svg" alt="flowspace mockup">
+            <img class="flowspacemockup" src="images/flowspacemockup.svg" alt="flowspace mockup">
         </div>
     </section>
 
@@ -112,7 +112,7 @@
           <div class="sectiontitle">
           <div class="centered">
             <h1 class="casestudyheader">discovery & research</h1>
-              <img class=casestudyimage src="../images/research.svg" alt="Discovery & Research">
+              <img class=casestudyimage src="images/research.svg" alt="Discovery & Research">
         </div>
           </div>
         </section>
@@ -126,7 +126,7 @@
 </div>
 <div class="competitive-container">
   <div class="complist" id="dropbox">
-          <img src="../images/dropbox.png" alt="dropbox">
+          <img src="images/dropbox.png" alt="dropbox">
               <ul>
                   <li>info list</li>
                   <li>info list</li>
@@ -137,7 +137,7 @@
             <hr>
 
         <div class="complist" id="box">
-            <img src="../images/box.png" alt="box">
+            <img src="images/box.png" alt="box">
                 <ul>
                     <li>info list</li>
                     <li>info list</li>
@@ -148,7 +148,7 @@
               <hr>
 
           <div class="complist" id="googledrive">
-              <img src="../images/googledrive.png" alt="googledrive">
+              <img src="images/googledrive.png" alt="googledrive">
                   <ul>
                       <li>info list</li>
                       <li>info list</li>
@@ -198,7 +198,7 @@
     <div class="personascontainer">
       <div id="Ronald">
         <h4>Ronald C.</h4>
-          <img src="../images/ronaldc.svg" alt="Ronald">
+          <img src="images/ronaldc.svg" alt="Ronald">
             <h4>Frustrations</h4>
                 <p>Security feature.</p>
               <h4>Goals</h4>
@@ -210,7 +210,7 @@
 
     <div id="Kaela">
       <h4>Kaela S.</h4>
-        <img src="../images/kaelas.svg" alt="Kaela">
+        <img src="images/kaelas.svg" alt="Kaela">
       <h4>Frustrations</h4>
         <p>Security</p>
       <h4>Goals</h4>
@@ -221,7 +221,7 @@
 </section>
 <div class="button">
   <a href="https://drive.google.com/file/d/1bfKbyXNFjrIQJokcmbPojVt7sAB9dQhr/view?usp=sharing"><span class="buttonhighlight">View Personas</span>
-    <img src="../images/sidearrow.svg" alt="buttonarrow">
+    <img src="images/sidearrow.svg" alt="buttonarrow">
   </a>
 </div>
 <br>
@@ -231,7 +231,7 @@
     <div class="sectiontitle">
   <div class="centered">
     <h1 class="casestudyheader">information architecture</h1>
-      <img class=casestudyimage src="../images/IA.svg" alt="Information Architecture">
+      <img class=casestudyimage src="images/IA.svg" alt="Information Architecture">
 </div>
   </div>
 </section>
@@ -246,7 +246,7 @@
 
   <div class="button">
     <a href="https://whimsical.com/YK2dbDoAyvMwLvEDd1xdZZ"><span class="buttonhighlight">View Stories</span>
-      <img src="../images/sidearrow.svg" alt="buttonarrow">
+      <img src="images/sidearrow.svg" alt="buttonarrow">
     </a>
   </div>
 
@@ -257,7 +257,7 @@
       <p> I created user flows based user stories I created in order to provide the best experience for my users.</p>
     </div>
     <div class="userflowimage">
-      <img src="../images/userflows.png" alt="User Flow">
+      <img src="images/userflows.png" alt="User Flow">
     </div>
       <div class="userflow-breakdown">
         <ul>
@@ -270,7 +270,7 @@
     </div>
       <div class="button">
         <a href="https://whimsical.com/YK2dbDoAyvMwLvEDd1xdZZ"><span class="buttonhighlight">View Flows</span>
-          <img src="../images/sidearrow.svg" alt="buttonarrow">
+          <img src="images/sidearrow.svg" alt="buttonarrow">
         </a>
       </div>
     </section>
@@ -316,7 +316,7 @@
       </div>
     <div class="usability-analysis">
       <p>There was consistent confusion when it came to the hover buttons for share, download, and move file. Users were unable to find them and wanted to go to the vertical dots that many people know as an indicator for ‘options’. In my next iteration, I chose to place those options under the vertical dots and remove the hover buttons all together.</p>
-        <img src="../images/wireframeupdate.svg" alt="Wireframe update">
+        <img src="images/wireframeupdate.svg" alt="Wireframe update">
    </div>
 </section>
   <!--Visual Design-->
@@ -324,7 +324,7 @@
     <div class="sectiontitle">
     <div class="centered">
       <h1 class="casestudyheader">visual design</h1>
-        <img class=casestudyimage src="../images/visualdesign.svg" alt="Visual Design">
+        <img class=casestudyimage src="images/visualdesign.svg" alt="Visual Design">
     </div>
     </div>
   </section>
@@ -335,34 +335,34 @@
           <p>Entering flow is when  the mental state of operation in which a person performing an activity is fully immersed in a feeling of energized focus, full involvement, and enjoyment in the process of the activity.</p>
           <p>The idea is to melt this concept into a cloud storage service where all of your important files are in one place and are easily organizable to make sure you have everything you need to collaborate, share, and create in either a personal or professional manner.</p>
         <h3 class="subtitle">Logo Sketches & Concepts</h3>
-            <img src="../images/logosketches.svg" alt="logo sketches">
+            <img src="images/logosketches.svg" alt="logo sketches">
           <p>I drew up some images that made me think of the word ‘flow’, and eventually came up with this sort of melting down an icon concept.</p>
           <p>Once this was drawn out and the feeling that I wanted Flowspace to evoke was chosen, I got to work choosing a color palette that I thought would help express those emotions further.</p>
           <p>I had originally wanted to use a very minimalistic look when it came to the logo, starting with this black and white version, but seeing it in digital form, I decided it needed a bit more.</p>
-            <img src="../images/digitalsketches.svg" alt="digital logo sketches">
+            <img src="images/digitalsketches.svg" alt="digital logo sketches">
       <div class="color logos">
-            <img src="../images/digitallogosketchescolor.svg" alt="digital color logos">
+            <img src="images/digitallogosketchescolor.svg" alt="digital color logos">
           </div>
         <h3 class="subtitle">Style Guide</h3>
           <p>I chose to use the darker blue as a brand color because it symbolizes intelligence and trust while the lighter coral and aqua give an inviting, friendly vibe. The coral color is a pop of color that is fun and energetic, like entering a “flow state” can be. I believe the fonts are soft and playful which add to this effect. I chose to use the same fonts together instead of the previous ‘basic’ font as the brand font because once I tried it out, they seemed to mesh well together and look different enough when changing weight and size, although they are technically the same.</p>
-            <img src="../images/styleguide.svg" alt="Style Guide">
+            <img src="images/styleguide.svg" alt="Style Guide">
       </div>
           <div class="button">
             <a href="styleguide.pdf"><span class="buttonhighlight">View style guide</span>
-              <img src="../images/sidearrow.svg" alt="buttonarrow">
+              <img src="images/sidearrow.svg" alt="buttonarrow">
             </a>
           </div>
   </section>
 <section class="hifi">
   <div class="hifi-container">
     <h3 class="subtitle">Flowspace Homepage</h3>
-      <img src="../images/flowspacemockupshome.svg" alt="Homepage Mockups">
+      <img src="images/flowspacemockupshome.svg" alt="Homepage Mockups">
         <h3 class="subtitle">Flowspace Dashboard</h3>
-          <img src="../images/hifimockups.svg" alt="Dashboard Mockups">
+          <img src="images/hifimockups.svg" alt="Dashboard Mockups">
     </div>
   <div class="button">
       <a href="https://www.figma.com/proto/nSRczBjdL1rIGC3aIa2fnl/Flowspace-Mockups?node-id=26%3A2&viewport=470%2C-104%2C0.018384581431746483&scaling=scale-down-width"><span class="buttonhighlight">View Prototype</span>
-        <img src="../images/sidearrow.svg" alt="buttonarrow">
+        <img src="images/sidearrow.svg" alt="buttonarrow">
       </a>
   </div>
 </section>
@@ -371,7 +371,7 @@
       <div class="sectiontitle">
   <div class="centered">
     <h1 class="casestudyheader">User Testing</h1>
-      <img class=casestudyimage src="../images/testing.svg" alt="User Testing">
+      <img class=casestudyimage src="images/testing.svg" alt="User Testing">
     </div>
   </div>
 </section>
@@ -393,7 +393,7 @@
    </div>
    <div class="video">
      <video width="640" height="480" controls>
-    <source src="../videos/tour.mov">
+    <source src="videos/tour.mov">
     </video>
   </div>
 </section>
@@ -417,13 +417,13 @@
   <h1>Let's work together!</h1>
   <div class="contactbutton">
   <a href="contact.html">get in touch
-    <img src="../images/sidearrow.svg" alt="buttonarrow">
+    <img src="images/sidearrow.svg" alt="buttonarrow">
   </a>
 </div>
       <ul>
-        <li> <a href="mailto:naefstathiou@gmail.com"><img src="../images/mail.svg" alt="mail"></a></li>
-        <li> <a href="https://github.com/nikkefstath"><img src="../images/github.svg" alt="github"></a></li>
-        <li> <a href="www.linkedin.com/in/nikkiefstathiou"><img src="../images/linkedin.svg" alt="linkedin"></a></li>
+        <li> <a href="mailto:naefstathiou@gmail.com"><img src="images/mail.svg" alt="mail"></a></li>
+        <li> <a href="https://github.com/nikkefstath"><img src="images/github.svg" alt="github"></a></li>
+        <li> <a href="www.linkedin.com/in/nikkiefstathiou"><img src="images/linkedin.svg" alt="linkedin"></a></li>
       </ul>
 </footer>
 </div>
